--- a/rpi.css
+++ b/rpi.css
@@ -120,6 +120,12 @@
   text-transform: uppercase;
 }
 
+.rpi-container {
+  max-width: 1200px;
+  padding: 1rem;
+  margin: 0 auto;
+}
+
 html, body {
   padding: 0;
   margin: 0;
