--- a/scss/base.scss
+++ b/scss/base.scss
@@ -3,6 +3,7 @@
 @use 'buttons';
 @use 'navbar';
 @use 'form';
+@use 'layout';
 
 // @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400&display=swap');
 
