--- a/rpi.css
+++ b/rpi.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400&display=swap");
 :root {
   /* Primary Colors */
   --rpi-red: #d6001c;
@@ -99,9 +100,21 @@
   color: var(--rpi-white);
   font-size: 1.25rem;
 }
-.rpi-navbar .navbar-item {
-  padding: 1rem 2rem;
+.rpi-navbar .navbar-brand {
+  font-weight: 600;
+}
+.rpi-navbar .navbar-item, .rpi-navbar .navbar-brand {
+  padding: 1rem;
   display: inline-block;
+  color: inherit;
+  text-decoration: none;
+}
+.rpi-navbar .navbar-item {
+  transition: background-color 0.1s ease-in, color 0.1s ease-in;
+}
+.rpi-navbar .navbar-item:hover {
+  background-color: var(--rpi-white);
+  color: var(--rpi-darkestgray);
 }
 
 .rpi-input {
