--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -4,8 +4,23 @@
     color: var(--rpi-white);
     font-size: 1.25rem;
     
-    .navbar-item {
-        padding: 1rem 2rem;
+    .navbar-brand {
+        font-weight: 600;
+    }
+
+    .navbar-item, .navbar-brand {
+        padding: 1rem;
         display: inline-block;
+        color: inherit;
+        text-decoration: none;
+    }
+
+    .navbar-item {
+        transition: background-color 0.1s ease-in, color 0.1s ease-in;
+        
+        &:hover {
+            background-color: var(--rpi-white);
+            color: var(--rpi-darkestgray);
+        }
     }
 }
