--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400&display=swap');
+
+
 :root {
     /* Fonts */
     --rpi-sans: 'Source Sans Pro', sans-serif;
@@ -42,3 +45,4 @@
         font-size: 2rem;
     }
 }
+
