--- a/rpi.css
+++ b/rpi.css
@@ -23,12 +23,15 @@
 }
 
 [class^=rpi-h] {
-  margin-top: 0;
+  margin-top: 1rem;
   margin-bottom: 0.5rem;
   color: var(--rpi-black);
 }
 [class^=rpi-h] a {
   color: var(--rpi-darkred);
+}
+[class^=rpi-h] + p {
+  margin-top: 0;
 }
 
 .rpi-h1 {
@@ -51,13 +54,24 @@
 
 .rpi-page-title {
   color: var(--rpi-darkred);
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   margin-top: 0;
   margin-bottom: 1rem;
   font-weight: 500;
 }
 .rpi-page-title.smaller {
+  font-size: 2.5rem;
+}
+.rpi-page-title + .rpi-page-subtitle {
+  margin-top: -1rem;
+}
+
+.rpi-page-subtitle {
+  color: var(--rpi-medgray);
   font-size: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  font-weight: 500;
 }
 
 .rpi-buttons {
