--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -7,12 +7,16 @@
 }
 
 [class^='rpi-h'] {
-    margin-top: 0;
+    margin-top: 1rem;
     margin-bottom: 0.5rem;
     color: var(--rpi-black);
 
     a {
         color: var(--rpi-darkred);
+    }
+
+    + p {
+        margin-top: 0;
     }
 }
 
@@ -36,13 +40,25 @@
 
 .rpi-page-title {
     color: var(--rpi-darkred);
-    font-size: 2.5rem;
+    font-size: 3.5rem;
     margin-top: 0;
     margin-bottom: 1rem;
     font-weight: 500;
 
     &.smaller {
-        font-size: 2rem;
+        font-size: 2.5rem;
     }
+
+    +.rpi-page-subtitle {
+        margin-top: -1rem;
+    }
+}
+
+.rpi-page-subtitle {
+    color: var(--rpi-medgray);
+    font-size: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    font-weight: 500;
 }
 
