--- a/rpi.css
+++ b/rpi.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400&display=swap");
 :root {
   /* Primary Colors */
@@ -147,10 +148,40 @@
   text-transform: uppercase;
 }
 
+ul.rpi-arrow-nav {
+  margin: 0;
+  margin-top: 2rem;
+  list-style-type: none;
+  padding: 0;
+}
+ul.rpi-arrow-nav li {
+  border-top: 1px solid var(--rpi-accent-gray);
+  padding: 3% 1%;
+}
+ul.rpi-arrow-nav li a {
+  text-decoration: none;
+  color: var(--rpi-medgray);
+}
+ul.rpi-arrow-nav li:last-child {
+  border-bottom: 1px solid var(--rpi-accent-gray);
+}
+ul.rpi-arrow-nav li::after {
+  content: "»";
+  float: right;
+  color: var(--rpi-medgray);
+}
+
 .rpi-container {
   max-width: 1200px;
   padding: 1rem;
   margin: 0 auto;
+}
+
+.rpi-card {
+  margin: 3rem auto;
+  padding: 3rem;
+  max-width: 500px;
+  background-color: var(--rpi-accent-lightgray);
 }
 
 html, body {
