--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -3,3 +3,11 @@
     padding: 1rem;
     margin: 0 auto;
 }
+
+.rpi-card {
+    margin: 3rem auto;
+    padding: 3rem;
+
+    max-width: 500px;
+    background-color: var(--rpi-accent-lightgray);
+}
