--- a/rpi.css
+++ b/rpi.css
@@ -120,12 +120,17 @@
 }
 .rpi-navbar .navbar-item, .rpi-navbar .navbar-brand {
   padding: 1rem;
+  margin: 0;
   display: inline-block;
   color: inherit;
   text-decoration: none;
 }
 .rpi-navbar .navbar-item {
   transition: background-color 0.1s ease-in, color 0.1s ease-in;
+}
+.rpi-navbar .navbar-item.is-active {
+  background-color: var(--rpi-white);
+  color: var(--rpi-darkestgray);
 }
 .rpi-navbar .navbar-item:hover {
   background-color: var(--rpi-white);
