--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -10,6 +10,7 @@
 
     .navbar-item, .navbar-brand {
         padding: 1rem;
+        margin: 0;
         display: inline-block;
         color: inherit;
         text-decoration: none;
@@ -18,6 +19,11 @@
     .navbar-item {
         transition: background-color 0.1s ease-in, color 0.1s ease-in;
         
+        &.is-active {
+            background-color: var(--rpi-white);
+            color: var(--rpi-darkestgray);
+        }
+
         &:hover {
             background-color: var(--rpi-white);
             color: var(--rpi-darkestgray);
