--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -1,17 +1,19 @@
+@import "colors";
+
 .rpi-input {
-    font-size: 0.9rem;
-    font-weight: 300;
+  font-size: 0.9rem;
+  font-weight: 300;
 
-    margin: 0;
-    margin-bottom: 1rem;
+  margin: 0;
+  margin-bottom: 1rem;
 
-    padding: 0.375em 0.75em;
-    border: 1px solid var(--rpi-darkestgray);
-    width: 100%;
+  padding: 0.375em 0.75em;
+  border: 1px solid $rpi-darkestgray;
+  width: 100%;
 }
 
 .rpi-label {
-    color: var(--rpi-darkred);
-    font-weight: bold;
-    text-transform: uppercase;
+  color: $rpi-darkred;
+  font-weight: bold;
+  text-transform: uppercase;
 }
