--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,13 +1,15 @@
+@import "colors";
+
 .rpi-container {
-    max-width: 1200px;
-    padding: 1rem;
-    margin: 0 auto;
+  max-width: 1200px;
+  padding: 1rem;
+  margin: 0 auto;
 }
 
 .rpi-card {
-    margin: 3rem auto;
-    padding: 3rem;
+  margin: 3rem auto;
+  padding: 3rem;
 
-    max-width: 500px;
-    background-color: var(--rpi-accent-lightgray);
+  max-width: 500px;
+  background-color: $rpi-accent-lightgray;
 }
