--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,32 +1,35 @@
+@import "colors";
+
 .rpi-navbar {
-    width: 100%;
-    background-color: var(--rpi-darkestgray);
-    color: var(--rpi-white);
-    
-    .navbar-brand {
-        font-size: 1.25rem;
-        font-weight: 600;
+  width: 100%;
+  background-color: $rpi-darkestgray;
+  color: $rpi-white;
+
+  .navbar-brand {
+    font-size: 1.25rem;
+    font-weight: 600;
+  }
+
+  .navbar-item,
+  .navbar-brand {
+    padding: 1rem;
+    margin: 0;
+    display: inline-block;
+    color: inherit;
+    text-decoration: none;
+  }
+
+  .navbar-item {
+    transition: background-color 0.1s ease-in, color 0.1s ease-in;
+
+    &.is-active {
+      background-color: $rpi-white;
+      color: $rpi-darkestgray;
     }
 
-    .navbar-item, .navbar-brand {
-        padding: 1rem;
-        margin: 0;
-        display: inline-block;
-        color: inherit;
-        text-decoration: none;
+    &:hover {
+      background-color: $rpi-white;
+      color: $rpi-darkestgray;
     }
-
-    .navbar-item {
-        transition: background-color 0.1s ease-in, color 0.1s ease-in;
-        
-        &.is-active {
-            background-color: var(--rpi-white);
-            color: var(--rpi-darkestgray);
-        }
-
-        &:hover {
-            background-color: var(--rpi-white);
-            color: var(--rpi-darkestgray);
-        }
-    }
+  }
 }
