--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,64 +1,66 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400&display=swap");
 
+@import "colors";
+
+$rpi-sans: "Source Sans Pro", sans-serif;
 
 :root {
-    /* Fonts */
-    --rpi-sans: 'Source Sans Pro', sans-serif;
+  /* Fonts */
+  --rpi-sans: #{$rpi-sans};
 }
 
-[class^='rpi-h'] {
-    margin-top: 1rem;
-    margin-bottom: 0.5rem;
-    color: var(--rpi-black);
+[class^="rpi-h"] {
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+  color: $rpi-black;
 
-    a {
-        color: var(--rpi-darkred);
-    }
+  a {
+    color: $rpi-darkred;
+  }
 
-    + p {
-        margin-top: 0;
-    }
+  + p {
+    margin-top: 0;
+  }
 }
 
 .rpi-h1 {
-    font-size: 2.5rem;
-    line-height: 1.5;
-    font-weight: 500;
+  font-size: 2.5rem;
+  line-height: 1.5;
+  font-weight: 500;
 }
 
 .rpi-h2 {
-    font-size: 1rem;
-    line-height: 1.25;
-    font-weight: 600;
+  font-size: 1rem;
+  line-height: 1.25;
+  font-weight: 600;
 }
 
 .rpi-h3 {
-    font-size: 1rem;
-    line-height: 1.25;
-    text-transform: uppercase;
+  font-size: 1rem;
+  line-height: 1.25;
+  text-transform: uppercase;
 }
 
 .rpi-page-title {
-    color: var(--rpi-darkred);
-    font-size: 3.5rem;
-    margin-top: 0;
-    margin-bottom: 1rem;
-    font-weight: 500;
+  color: $rpi-darkred;
+  font-size: 3.5rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  font-weight: 500;
 
-    &.smaller {
-        font-size: 2.5rem;
-    }
+  &.smaller {
+    font-size: 2.5rem;
+  }
 
-    +.rpi-page-subtitle {
-        margin-top: -1rem;
-    }
+  + .rpi-page-subtitle {
+    margin-top: -1rem;
+  }
 }
 
 .rpi-page-subtitle {
-    color: var(--rpi-medgray);
-    font-size: 2rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    font-weight: 500;
+  color: $rpi-medgray;
+  font-size: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  font-weight: 500;
 }
-
